# clang-query-msvc

./: CMakeLists.txt  README.md
test/: int_add.cpp
tool/: CMakeLists.txt
